--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
 .App {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    justify-content: space-between;
+    align-items: center; */
+    /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
 }  
 
 body {
@@ -20,7 +20,7 @@ body {
     background-color: #f2f2f2;
 }
 
-.auth-container {
+/* .auth-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,7 +31,7 @@ body {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     margin: 20px;
     width: 400px;
-}
+} */
 
 .form-group {
     display: flex;
@@ -50,20 +50,7 @@ input {
     border-radius: 5px;
 }
 
-.navbar {
-    margin: 0;
-    width: 100%;
-    height: 80px;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    text-decoration: none;
-}
-
 a {
-    color: white;
     text-decoration: none;
     margin: 10px;
     font-size: 25px;
