--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,11 @@
-.App {
-    /* display: flex;
+/* .App {
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center; */
-    /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
-}  
+    align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}   */
 
 body {
     margin: 0;
