--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -1,7 +1,14 @@
+.title {
+    text-decoration: underline;
+    text-decoration-color: orangered;
+    text-underline-offset: 6px;
+}
+
 .home {
     /* border: 1px solid red; */
     /* font-family: 'DM Sans', sans-serif; */
     font-family: 'Poppins', sans-serif;
+    background-color: rgb(243, 238, 231);
 }
 
 .home a {
@@ -12,7 +19,7 @@
 
 .home a:hover {
     transition: 0.8s;
-    /* border: 1px solid rgb(243, 205, 133); */
+    /* border: 1px solid rgb(255, 255, 255); */
     border-radius: 10px;
 }
 
@@ -20,19 +27,37 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin: 0 10rem;
+    /* border: 2px solid pink; */
+    column-gap: 5rem;
 }
 
+/* -------------------------------- Users Recipes  -------------------------------- */
+
 .recipeItem {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 10px;
     margin-bottom: 10px;
-    width: fit-content;
-
 }
 
 .recipeItem img {
+    max-width: 100%;
     border-radius: 10px;
+    height: 300px;
+    object-fit: cover;
+    flex-basis: 30%;
+    margin: auto;
 }
+
+.recipeItem p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2; 
+    -webkit-box-orient: vertical;
+}
+
+/* -------------------------------- Popular  -------------------------------- */
 
 .popularDiv {
     background-color: rgb(240, 227, 210);
@@ -40,7 +65,11 @@
 }
 
 .popular-title {
+    margin: 3rem 0 3rem 0;
     text-align: center;
+    text-decoration: underline;
+    text-decoration-color: orangered;
+    text-underline-offset: 6px;
 }
 
 .popular-recipes {
@@ -51,6 +80,7 @@
 
 .popular-recipes img {
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .popular-big {
@@ -60,12 +90,13 @@
 
 .popular-big h1 {
     margin: 0;
-    font-size: 25px;
-    text-align: center;
+    font-size: 20px;
 }
 
 .popular-big h1:hover {
     text-decoration: underline;
+    text-decoration-color: orange;
+    text-underline-offset: 3px;
 }
 
 .popular-big img {
@@ -93,13 +124,15 @@
 }
 
 .popular-side div h1 {
-    padding: 0px 1rem;
+    padding: 5px 1rem;
     font-size: 1rem;
     margin: 0;
 }
 
 .popular-side div h1:hover {
     text-decoration: underline;
+    text-decoration-color: orange;
+    text-underline-offset: 3px;
 }
 
 .popular-side img {
@@ -128,3 +161,96 @@
 .popular-side-likes {
     display: flex;
 }
+/* -------------------------------- Breakfast  -------------------------------- */
+.breakfast { 
+    margin-top: 5rem;
+}
+
+.breakfast h1 {
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.breakfast-display {
+    margin: 0px 300px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.breakfast-item {
+    flex: 1;
+    flex-basis: 30%;
+    height: 370px;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.breakfast-item h4 {
+    inline-size: 350px;
+}
+
+.breakfast-item img {
+    max-width: 100%;
+    height: 250px;
+    margin: 0;
+    object-fit: contain;
+    border-radius: 10px;
+}
+
+.breakfast-description h4, h5{
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+}
+
+.breakfast-description h4:hover {
+    text-decoration: underline;
+    text-decoration-color: orange;
+    text-underline-offset: 3px;
+}
+
+.breakfast-description h5 {
+    font-weight: 300;
+}
+
+.usersRecipes h1 {
+    margin: 5rem 0 2rem 0;
+    text-align: center;
+    text-decoration: underline;
+    text-decoration-color: orangered;
+    text-underline-offset: 6px;
+}
+
+/* .usersRecipes img {
+
+} */
+
+.underline {
+    display: inline;
+    position: relative;
+    overflow: hidden;
+  }
+  .underline:after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    width: 0;
+    bottom: -5px;
+    background: #000;
+    height: 4px;
+    transition-property: width;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
+  }
+  .underline:hover:after,
+  .underline:focus:after,
+  .underline:active:after {
+    left: 0;
+    right: auto;
+    width: 100%;
+  }
