--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -33,11 +33,18 @@
 }
 
 /* -------------------------------- Users Recipes  -------------------------------- */
+.usersRecipes h1 {
+    margin: 5rem 0 5rem 0;
+    text-align: center;
+    text-decoration: underline;
+    text-decoration-color: orangered;
+    text-underline-offset: 6px;
+}
 
 .recipeItem {
     /* border: 1px solid black; */
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 2rem;
 }
 
 .recipeItem img {
@@ -197,7 +204,7 @@
     max-width: 100%;
     height: 250px;
     margin: 0;
-    object-fit: contain;
+    object-fit: cover;
     border-radius: 10px;
 }
 
@@ -217,17 +224,6 @@
     font-weight: 300;
 }
 
-.usersRecipes h1 {
-    margin: 5rem 0 2rem 0;
-    text-align: center;
-    text-decoration: underline;
-    text-decoration-color: orangered;
-    text-underline-offset: 6px;
-}
-
-/* .usersRecipes img {
-
-} */
 
 .underline {
     display: inline;
