--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -1,43 +1,45 @@
 .navbar {
     margin: 0;
-    width: 100%;
-    height: 80px;
     background-color: white;
     box-shadow: 0px 0px 5px;
+    display: block;
+    font-family: 'Poppins', sans-serif;
+}
+
+.navbar-upper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     text-decoration: none;
     font-family: 'DM Sans', sans-serif;
+    /* border: 1px red solid; */
 }
 
-.navbar img {
+.navbar-upper img {
     scale: 0.7;
-    padding-top: 1rem;
-    margin: 2px 0;
+    margin: 0px 6rem;
     width: 400px;
 }
 
-.navbar a {
+.navbar-upper a {
     color: black;
-    padding: 10px;
     border-radius: 10px;
     text-decoration: underline;
     text-decoration-color: transparent;
 }
 
-.navbar a:hover:not(.logout){
+.navbar-upper a:hover:not(.logout){
     transition: 0.8s;
     text-decoration: underline;
     text-decoration-color: rgb(255, 123, 0);
 }
 
-.navlinks {
+.navlinks, .navlinks div {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-right: 3rem;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .logout {
@@ -48,4 +50,63 @@
     color: white;
     transition: 0.8s;
     background-color:orange;
+}
+
+.navbar-lower {
+    margin: 0 10rem;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-evenly;
+    width: min-content;
+    gap: 2rem;
+
+}
+
+.navbar-lower a {
+    color: black;
+    text-decoration: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;  
+}
+
+.dropbtn {
+    color: white;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 5px;
 }
