--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,12 +8,12 @@
 }   */
 
 html {
-    height: 100%;
 }
 
 body {
     margin: 0;
     padding: 0;
+    min-height: 100vh;
 }
 
 .auth {
@@ -43,39 +43,7 @@ body {
     margin-bottom: 20px;
 }
 
-label {
-    font-weight: bold;
-    margin-bottom: 5px;
-}
 
-input {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-}
-
-/* a {
-    text-decoration: none;
-    margin: 10px;
-    font-size: 25px;
-} */
-
-.create-recipe {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    margin: 20px;
-    width: 400px;
-}
-.create-recipe form {
-    display: flex;
-    flex-direction: column;
-}
 ul {
     list-style: none;
     padding: 0;
