--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,8 +7,9 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }   */
 
-html {
-}
+/* html {
+    height: 100%;
+} */
 
 body {
     margin: 0;
@@ -36,12 +37,12 @@ body {
     margin: 20px;
     width: 400px;
 } */
-
+/* 
 .form-group {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
-}
+} */
 
 
 ul {
