--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -122,7 +122,7 @@
 }
 
 .dropdown-content a:hover {
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1; */
     background-color: orange;
     transition: 0.2s;
 }
