--- a/client/src/components/register.css
+++ b/client/src/components/register.css
@@ -1,16 +1,85 @@
 .register-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 1px 7px rgba(0, 0, 0, 0.3);
-    margin: 10rem auto;
-    width: 400px;
+	min-height: 100vh;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-.register-container h1 {
-    font-size: 2rem;
+.register-leftside {
+	height: 100vh;
+	width: 50vw;
+}
+
+.register-leftside img {
+	width: 50vw;
+	height: 100vh;
+	display: block;
+	object-fit: cover;
+	object-position: center;
+}
+
+.register-form {
+	/* background-color: rgb(228, 255, 228); */
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: center;
+	/* background-color: white; */
+	/* border-radius: 5px; */
+	/* box-shadow: 0 1px 7px rgba(0, 0, 0, 0.3); */
+	margin: auto;
+	font-family: "Libre Baskerville", serif;
+	font-weight: 700;
+    width: 50vw;
+	height: 100vh;
+    position: relative;
+}
+
+.register-form form {
+    margin: auto;
+}
+
+.register-form img {
+    /* left: 30px; */
+    align-items: start;
+    /* vertical-align: top; */
+    width: 100px;
+    /* border: 1px red solid; */
+    padding-top: 20px;
+}
+
+.register-form form h1 {
+	font-size: 3rem;
+    text-align: center;
+}
+
+.form-group {
+    font-weight: 900;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group input {
+    height: 30px;
+    width: 400px;
+    border: 2px solid rgb(11, 4, 66);
+    margin-bottom: 1.5rem;
+}
+
+/* .form-group input:: {
+    border: 2px solid blue;
+} */
+
+.register-form form button {
+    display: flex;
+    margin: auto;
+    /* padding: 10px; */
+    font-weight: 700;
+    font-style: italic;
+    border: transparent;
+    /* border-radius: 10px; */
+    visibility: none;
+    background-color: white;
 }
