--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -1,140 +1,148 @@
 .navbar {
-    margin: 0;
-    background-color: white;
-    box-shadow: 0px 0px 5px;
-    display: block;
-    font-family: 'Poppins', sans-serif;
+	margin: 0;
+	background-color: white;
+	box-shadow: 0px 0px 5px;
+	display: block;
+	font-family: "Poppins", sans-serif;
 }
 
 .navbar-upper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-decoration: none;
-    font-family: 'DM Sans', sans-serif;
-    /* border: 1px red solid; */
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	text-decoration: none;
+	font-family: "DM Sans", sans-serif;
+	/* border: 1px red solid; */
 }
 
 .navbar-upper img {
-    scale: 0.7;
-    margin: 0px 6rem;
-    width: 400px;
+	scale: 0.7;
+	margin: 0px 6rem;
+	width: 400px;
 }
 
 .navbar-upper a {
-    color: black;
-    border-radius: 10px;
-    text-decoration: underline;
-    text-decoration-color: transparent;
+	color: black;
+	border-radius: 10px;
+	text-decoration: underline;
+	text-decoration-color: transparent;
 }
 
-.navbar-upper a:hover:not(.logout){
-    transition: 0.8s;
-    text-decoration: underline;
-    text-decoration-color: orangered;
-    text-underline-offset: 6px;
+.navbar-upper a:hover:not(.logout) {
+	transition: 0.8s;
+	text-decoration: underline;
+	text-decoration-color: orangered;
+	text-underline-offset: 6px;
 }
 
 .navlinks {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 2rem;
-    padding-right: 3rem;
-    gap: 2rem;
-    font-size: 20px;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-top: 2rem;
+	padding-right: 3rem;
+	gap: 2rem;
+	font-size: 20px;
 }
 
 .navlinks div {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2rem;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 2rem;
 }
 
 .logoutIcon {
-    position: absolute;
-    padding-top: 4px;
+	position: absolute;
+	padding-top: 4px;
 }
 
 .logout {
-    background-color:rgb(245, 229, 200);
-    padding: 10px;
-    padding-right: 25px;
+	background-color: rgb(245, 229, 200);
+	padding: 10px;
+	padding-right: 25px;
 }
 
 .logout:hover {
-    color: white;
-    transition: 0.3s ease;
-    background-color:orangered;
-    padding-right: 25px;
-    cursor: pointer;
-    text-underline-offset: 6px;
+	color: white;
+	transition: 0.3s ease;
+	background-color: orangered;
+	padding-right: 25px;
+	cursor: pointer;
+	text-underline-offset: 6px;
 }
 
 .navbar-lower {
-    margin: 0 10rem;
-    list-style-type: none;
-    display: flex;
-    justify-content: space-evenly;
-    width: min-content;
-    gap: 2rem;
-    padding-bottom: 5px;
+	margin: 0 10rem;
+	list-style-type: none;
+	display: flex;
+	justify-content: space-evenly;
+	width: min-content;
+	gap: 2rem;
+	padding-bottom: 5px;
 }
 
 .navbar-lower a {
-    color: black;
-    text-decoration: none;
-    font-size: 20px;
-
+	color: black;
+	text-decoration: none;
+	font-size: 20px;
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;  
+	position: relative;
+	display: inline-block;
 }
 
 .dropbtn {
-    color: white;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    padding: 5px;
-
+	color: white;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+	padding: 5px;
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
 }
 
 .dropdown-content a:hover {
-    /* background-color: #f1f1f1; */
-    background-color: orange;
-    transition: 0.2s;
+	background-color: orange;
+	transition: 0.2s;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+	display: block;
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #f1f1f1;
+	background-color: #f1f1f1;
+	border-radius: 5px;
+	padding: 5px;
+	background-color: rgb(247, 212, 141);
+	transition: 0.2s;
+}
+
+.nav-userCreated {
+	width: max-content;
+
+}
+
+.nav-userCreated:hover {
+	background-color: rgb(247, 212, 141);
+	transition: 0.2s;
     border-radius: 5px;
-    padding: 5px;
-    background-color: rgb(247, 212, 141);
-    transition: 0.2s;
 }
