--- a/client/src/components/user-create-recipes.css
+++ b/client/src/components/user-create-recipes.css
@@ -27,7 +27,7 @@
 
 .recipeItem {
 	border: 4mm ridge rgb(138, 158, 183);
-    border-radius: 10px;
+	border-radius: 10px;
 	padding: 20px 20px;
 	margin-bottom: 2rem;
 }
@@ -38,13 +38,15 @@
 	height: 300px;
 	object-fit: cover;
 	flex-basis: 30%;
-    display: flex;
+	display: flex;
 	margin: auto;
 }
 
 .recipeItem-filledButton {
 	font-size: 1.5rem;
-    float: right;
+	float: right;
+	border: transparent;
+	background-color: transparent;
 }
 
 .recipeItem-emptyButton {
@@ -52,6 +54,7 @@
 	border: transparent;
 	cursor: pointer;
 	font-size: 1.5rem;
+	float: right;
 }
 
 .underline {
