--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -1,260 +1,277 @@
 .home {
-    /* border: 1px solid red; */
-    /* font-family: 'DM Sans', sans-serif; */
-    font-family: 'Poppins', sans-serif;
-    background-color: rgb(243, 238, 231);
+	/* border: 1px solid red; */
+	/* font-family: 'DM Sans', sans-serif; */
+	font-family: "Poppins", sans-serif;
+	background-color: rgb(243, 238, 231);
 }
 
 .home a {
-    color: black;
-    text-decoration: none;
-    border: 1px solid transparent;
+	color: black;
+	text-decoration: none;
+	border: 1px solid transparent;
 }
 
 .home a:hover {
-    transition: 0.8s;
-    /* border: 1px solid rgb(255, 255, 255); */
-    border-radius: 10px;
+	transition: 0.8s;
+	/* border: 1px solid rgb(255, 255, 255); */
+	border-radius: 10px;
 }
 
 .home ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin: 0 10rem;
-    /* border: 2px solid pink; */
-    column-gap: 5rem;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	margin: 0 10rem;
+	/* border: 2px solid pink; */
+	column-gap: 5rem;
 }
 
 /* -------------------------------- Users Recipes  -------------------------------- */
 .usersRecipes h1 {
-    margin: 5rem 0 5rem 0;
-    text-align: center;
-    text-decoration: underline;
-    text-decoration-color: orangered;
-    text-underline-offset: 6px;
+	margin: 5rem 0 5rem 0;
+	text-align: center;
+	text-decoration: underline;
+	text-decoration-color: orangered;
+	text-underline-offset: 6px;
 }
 
 .recipeItem {
-    /* border: 1px solid black; */
-    padding: 10px;
-    margin-bottom: 2rem;
+	/* border: 1px solid black; */
+	padding: 10px;
+	margin-bottom: 2rem;
+}
+
+.recipeItem h2 {
+    padding: 0;
+    margin: 0;
 }
 
 .recipeItem img {
-    max-width: 100%;
-    border-radius: 10px;
-    height: 300px;
-    object-fit: cover;
-    flex-basis: 30%;
-    margin: auto;
+	max-width: 100%;
+	border-radius: 10px;
+	height: 300px;
+	object-fit: cover;
+	flex-basis: 30%;
+	margin: auto;
 }
 
 .recipeItem p {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2; /* number of lines to show */
-    line-clamp: 2; 
-    -webkit-box-orient: vertical;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 2; /* number of lines to show */
+	line-clamp: 2;
+	-webkit-box-orient: vertical;
 }
 
 .recipeItem-filledButton {
 	font-size: 1.5rem;
-    float: right;
+	float: right;
+	/* border: transparent; */
+	background-color: aquamarine;
+	width: auto;
+	min-height: auto;
+	padding: 0;
+	margin: 0;
 }
 
 .recipeItem-emptyButton {
-	background-color: transparent;
+	/* background-color: transparent; */
+	background-color: rgb(243, 160, 200);
 	border: transparent;
 	cursor: pointer;
+	float: right;
 	font-size: 1.5rem;
+	width: auto;
+	min-height: auto;
+	padding: 0;
+	margin: 0;
 }
 
 /* -------------------------------- Popular  -------------------------------- */
 
 .popularDiv {
-    background-color: rgb(240, 227, 210);
-    padding: 20px 0px 30px 0px;
+	background-color: rgb(240, 227, 210);
+	padding: 20px 0px 30px 0px;
 }
 
 .popular-title {
-    margin: 3rem 0 3rem 0;
-    text-align: center;
-    text-decoration: underline;
-    text-decoration-color: orangered;
-    text-underline-offset: 6px;
+	margin: 3rem 0 3rem 0;
+	text-align: center;
+	text-decoration: underline;
+	text-decoration-color: orangered;
+	text-underline-offset: 6px;
 }
 
 .popular-recipes {
-    display: flex;
-    justify-content: center;
-    align-items: start;
+	display: flex;
+	justify-content: center;
+	align-items: start;
 }
 
 .popular-recipes img {
-    border-radius: 10px;
-    margin-bottom: 10px;
+	border-radius: 10px;
+	margin-bottom: 10px;
 }
 
 .popular-big {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .popular-big h1 {
-    margin: 0;
-    font-size: 20px;
+	margin: 0;
+	font-size: 20px;
 }
 
 .popular-big h1:hover {
-    text-decoration: underline;
-    text-decoration-color: orange;
-    text-underline-offset: 3px;
+	text-decoration: underline;
+	text-decoration-color: orange;
+	text-underline-offset: 3px;
 }
 
 .popular-big img {
-    width: 40rem;
+	width: 40rem;
 }
 
 .popular-side {
-    padding: 0 0 0 2rem;
-    display: flex;
-    flex-direction: column;
-    /* width: 450px; */
-    gap: 1rem;
+	padding: 0 0 0 2rem;
+	display: flex;
+	flex-direction: column;
+	/* width: 450px; */
+	gap: 1rem;
 }
 
 .popular-side a {
-    /* border: 1px solid rgb(10, 255, 35); */
+	/* border: 1px solid rgb(10, 255, 35); */
 }
 
 .popular-side img {
-    max-width: 8rem;
+	max-width: 8rem;
 }
 
 .popular-side a div {
-    display: flex;
+	display: flex;
 }
 
 .popular-side div h1 {
-    padding: 5px 1rem;
-    font-size: 1rem;
-    margin: 0;
+	padding: 5px 1rem;
+	font-size: 1rem;
+	margin: 0;
 }
 
 .popular-side div h1:hover {
-    text-decoration: underline;
-    text-decoration-color: orange;
-    text-underline-offset: 3px;
+	text-decoration: underline;
+	text-decoration-color: orange;
+	text-underline-offset: 3px;
 }
 
 .popular-side img {
-    width: 10rem;
+	width: 10rem;
 }
 
 .popular-side-description {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .popular-side-facts {
-    display: flex;
-    flex-direction: column;
-    padding: 0px 0rem;
-    margin: 0;
-    padding: 0px 1rem;
+	display: flex;
+	flex-direction: column;
+	padding: 0px 0rem;
+	margin: 0;
+	padding: 0px 1rem;
 }
 
 .popular-side-facts h5 {
-    /* border: 1px solid lightgreen; */
-    margin: 0;
-    font-weight: 300;
+	/* border: 1px solid lightgreen; */
+	margin: 0;
+	font-weight: 300;
 }
 
 .popular-side-likes {
-    display: flex;
+	display: flex;
 }
 /* -------------------------------- Breakfast  -------------------------------- */
-.breakfast { 
-    margin-top: 5rem;
+.six-recipes-section {
+	margin-top: 5rem;
 }
 
-.breakfast h1 {
-    text-align: center;
-    margin-bottom: 3rem;
+.six-recipes-section h1 {
+	text-align: center;
+	margin-bottom: 3rem;
 }
 
-.breakfast-display {
-    margin: 0px 300px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2rem;
+.six-recipes-section-display {
+	margin: 0px 300px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 2rem;
 }
 
-.breakfast-item {
-    flex: 1;
-    flex-basis: 30%;
-    height: 370px;
-    max-width: 100%;
-    margin: 0;
-    padding: 0;
+.six-recipes-section-item {
+	flex: 1;
+	flex-basis: 30%;
+	height: 370px;
+	max-width: 100%;
+	margin: 0;
+	padding: 0;
 }
 
-.breakfast-item h4 {
-    inline-size: 350px;
+.six-recipes-section-item h4 {
+	inline-size: 350px;
 }
 
-.breakfast-item img {
-    max-width: 100%;
-    height: 250px;
-    margin: 0;
-    object-fit: cover;
-    border-radius: 10px;
+.six-recipes-section-item img {
+	max-width: 100%;
+	height: 250px;
+	margin: 0;
+	object-fit: cover;
+	border-radius: 10px;
 }
 
-.breakfast-description h4, h5{
-    text-decoration: none;
-    padding: 0;
-    margin: 0;
+.six-recipes-section-description h4,
+h5 {
+	text-decoration: none;
+	padding: 0;
+	margin: 0;
 }
 
-.breakfast-description h4:hover {
-    text-decoration: underline;
-    text-decoration-color: orange;
-    text-underline-offset: 3px;
+.six-recipes-section-description h4:hover {
+	text-decoration: underline;
+	text-decoration-color: orange;
+	text-underline-offset: 3px;
 }
 
-.breakfast-description h5 {
-    font-weight: 300;
+.six-recipes-section-description h5 {
+	font-weight: 300;
 }
-
 
 .underline {
-    display: inline;
-    position: relative;
-    overflow: hidden;
+	display: inline;
+	position: relative;
+	overflow: hidden;
 }
 
 .underline:after {
-    content: "";
-    position: absolute;
-    z-index: 1;
-    right: 0;
-    width: 0;
-    bottom: -5px;
-    background: orangered;
-    height: 3px;
-    transition-property: width;
-    transition-duration: 0.3s;
-    transition-timing-function: ease-out;
+	content: "";
+	position: absolute;
+	z-index: 1;
+	right: 0;
+	width: 0;
+	bottom: -5px;
+	background: orangered;
+	height: 3px;
+	transition-property: width;
+	transition-duration: 0.3s;
+	transition-timing-function: ease-out;
 }
 
 .underline:hover:after,
 .underline:focus:after,
 .underline:active:after {
-    left: 0;
-    right: auto;
-    width: 100%;
+	left: 0;
+	right: auto;
+	width: 100%;
 }
