--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,17 +12,17 @@
 } */
 
 body {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
+	margin: 0;
+	padding: 0;
+	min-height: 100vh;
 }
 
 .auth {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f2f2f2;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-color: #f2f2f2;
 }
 
 /* .auth-container {
@@ -44,29 +44,41 @@ body {
     margin-bottom: 20px;
 } */
 
-
 ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+	list-style: none;
+	padding: 0;
+	margin: 0;
 }
 
 p {
-    max-width: 400px;
-    font-size: 12px;
+	max-width: 400px;
+	font-size: 12px;
 }
 
 .title {
-    text-decoration: underline;
-    text-decoration-color: orangered;
-    text-underline-offset: 6px;
+	text-decoration: underline;
+	text-decoration-color: orangered;
+	text-underline-offset: 6px;
 }
 
 footer {
-    margin-top: 6rem;
-    text-align: center;
-    min-height: 100%;
-    background-color: #ff9c88;
-    display: flex;
-    justify-content: space-evenly;
+	margin-top: 6rem;
+	text-align: center;
+	min-height: 100%;
+	background-color: #ff9c88;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.footer-description {
+
+}
+
+.footer-description p {
+    width: 700px;
+    margin: 0;
+}
+
+.loader {
+	text-align: center;
 }
